k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devsecops-platform
  labels:
    app.kubernetes.io/part-of: devsecops-cicd-platform
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
