k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delivery-api
  namespace: devsecops-platform
  labels:
    app.kubernetes.io/name: delivery-api
    app.kubernetes.io/part-of: devsecops-cicd-platform
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: delivery-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: delivery-api
        app.kubernetes.io/part-of: devsecops-cicd-platform
    spec:
      serviceAccountName: delivery-api
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 100
        runAsGroup: 101
        fsGroup: 101
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: delivery-api
          image: ghcr.io/ayanokoji-71/devsecops-cicd-platform:__IMAGE_TAG__
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          readinessProbe:
            httpGet:
              path: /readyz
              port: http
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 3
