k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-api
  namespace: devsecops-platform
  labels:
    app.kubernetes.io/name: delivery-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: delivery-api
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
